# badram

./: README.md
alias-reversing/apps/find-alias-individual/: Makefile  README.md  deploy.sh  find_alias_individual.c
alias-reversing/apps/test-alias/: Makefile  test_aliases.c
alias-reversing/modules/read_alias/: Makefile  deploy  kmod_readalias.c  readalias.c  readme.md
common-code/: Makefile  helpers.c  kvm_ioctls.c  mem_range_repo.c  parse_pagemap.c
common-code/include/: helpers.h  kvm_ioctls.h  mem_range_repo.h
scripts/pi-pico/ee1004/: README.md  i2c-dump-ee1004.py  i2c-read-protection-ee1004.py  i2c-temp-sensor-ee1004.py  i2c-unlock-ee1004.py  i2c-write-ee1004.py
sev-attacks/gpa2hpa-kernel-patches/: README.md  badram-kvm-v2.1.0.patch  rebuild-kvm.sh
sev-attacks/guest_context_replay/: README.md  launch-qemu.sh
sev-attacks/read_rmp/: Makefile  README.md  badram_gpa_swap_victim.c  deploy.sh  do_read_rmp.sh  dump-rmp-msrs.sh  read_rmp_main.c  rmp.c  rmp.h  swap_attack_main.c
sev-attacks/replay_vmsa/: Makefile  README.md  deploy.sh  replay_vmsa_main.c
sev-attacks/replay_vmsa/generate_id_block/: Cargo.toml
sev-attacks/replay_vmsa/generate_id_block/src/: main.rs
sev-attacks/replay_vmsa/generate_id_block/test-data/: auth-block.txt  id-block.txt
sev-attacks/rw_pa/: Makefile  README.md  deploy.sh  rw_pa_main.c
sev-attacks/simple-replay/: Makefile  README.md  badram-simple-replay-demo.webm  badram_sev_replay.c  badram_vm_victim.c  qemu_gpa2hpa.c  qemu_gpa2hpa.h
sgx-attacks/poc/: .gitignore  Makefile
sgx-membuster-attacks/poc/: README.md  main.c
(+27 files in other folders)
