[package]
name = "generate_id_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
sev = { version="3.1.1", features=["openssl"] }
base64 = "0.22.0"
bincode = "1.3.3"
